--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,22 @@ bootstrap/cache/
 .env.php
 .env
 
+/build/logs
+/build/coverage
+
+/app/tests/_log
+
+composer.phar
+
+.DS_Store
+
+/.idea
+/_ide_helper.php
+
+/app/config/packages
+/public/packages
+
+/node_modules
+
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
